# Examples

./: README.md  pyproject.toml
3Spot/: run_opt.py
3SpotEcalc/: ecalc_config.yaml  run_opt.py
3SpotRobust/: run_opt_rate.py
3dBox/data/: setup.py
3dBox/flowrock/: 3D_ES.toml
3dBox/tiny/: 3D_ESMDA.toml  RUNFILE.mako  plot_data.py  plot_objective_function.py  run_script.py
5SpotInverted/: run_opt.py
5SpotLineSearch/: plot_res.py
5SpotLineSearch/results/: optimize_result_0.npz  optimize_result_10.npz  optimize_result_14.npz  optimize_result_16.npz  optimize_result_17.npz  optimize_result_18.npz  optimize_result_2.npz  optimize_result_20.npz  optimize_result_4.npz  optimize_result_9.npz
LinearModel/: run_script.py
Quadratic/: run_opt.py
Rosenbrock/: run_opt.py
Spe11b/: INITIAL.DATA  PVBOUNDARIES.INC  README.md  SPE11B.mako  TRUE_PERMX.INC  centers.txt  corners.txt  input.toml  mask_4.npz  plot_spe11.py  setup.py
Spe11b/TRUE_RUN/: SPE11B.DATA
src/3Spot/: init_optim.toml
src/3SpotRobust/: run_opt_bhp.py
src/3dBox/data/: RUNFILE.mako  setup.py
src/3dBox/tiny/: 3D_ESMDA.toml  plot_data.py  plot_parameters.py  run_script.py
src/5SpotLineSearch/: 5SPOT.mako  run.py
src/5SpotLineSearch/include/: PERMX
src/5SpotLineSearch/results/: optimize_result_1.npz  optimize_result_11.npz  optimize_result_12.npz  optimize_result_13.npz  optimize_result_15.npz  optimize_result_19.npz  (+5 more)
src/LinearModel/: run_script.py
src/Quadratic/: init_optim.toml
src/Rosenbrock/: init_optim.toml
src/Spe11b/: README.md  TRUE_PERMX.INC  dt.txt  run_script.py
