[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "Examples"
version = "1.0"
description = "Examples using the Python Ensemble Toolbox"
authors = [
    { name = "Rolf J. Lorentzen", email = "rolo@norceresearch.no" }
]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.7"

[project.urls]
Homepage = "https://github.com/Python-Ensemble-Toolbox/Examples"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
